--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 /out/artifacts/*
 /jdbc-driver/*.jar
 /lib/*.jar
-~/*.jar
+/*/*.jar
+/apachepoi/curvesapi-1.03.jar
+/apachepoi/poi-3.14-20160307.jar
+/apachepoi/poi-ooxml-3.14-20160307.jar
+/apachepoi/poi-ooxml-schemas-3.14-20160307.jar
+/apachepoi/xmlbeans-2.6.0.jar
